--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: Epilogue, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -20,6 +20,8 @@ body {
 
 .container-title {
   width: 80%;
+  display: flex;
+  justify-content: center;
 }
 
 .title {
@@ -31,6 +33,7 @@ body {
 .container-cartTitle {
   position: relative;
   display: flex;
+  justify-content: start;
   align-items: center;
   background-color: rgb(10, 118, 79);
   width: 40%;
@@ -111,7 +114,8 @@ body {
   align-items: center;
   flex-grow: 1;
   padding: 10px;
-  text-align: center;
+  line-height: 20px;
+  font-size: 16px;
 }
 
 .item .item__image {
@@ -149,10 +153,28 @@ body {
 }
 
 .cart__item {
+  padding: 20px;
+  border: 2px solid red;
+}
+
+.cart__items img {
+  border: 2px solid red;
+  margin: 12px;
+  border-radius: 15px;
+  width: 150px;
+}
+
+.loading {
+  border: 2px solid black;
+  display: flex;
+  align-self: flex-end;
+  width: 50%;
   padding: 15px;
 }
 
-.cart__items .item__image {
-  border-radius: 15px;
-  width: 50px;
+.item__price {
+  display: flex;
+  justify-content: flex-end;
+  padding: 5px;
+  color: rgb(10, 118, 79);
 }
